# Subclip

./: README.md  main.py  setup.cfg
