[metadata]
name = Subclip
version = 0.0.1
author = Hyeonwook Kang
description = Module that could kind of help you with NLP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Signetar/Subclip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = subclip
python_requires = >=3.7
include_package_data = True
